--- a/techsummit15/index.html
+++ b/techsummit15/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Web for Everyone - TAMUS Technology Summit 2015</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/techsummit15.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
