--- a/techsummit15/index.html
+++ b/techsummit15/index.html
@@ -12,13 +12,13 @@
     
     <div class="row">
       <div class="large-12 columns">
-        <h1>Notes and Resources for "A Web for Everyone"</h1>
+        <h1><i>A Web for Everyone</i> Notes and Resources</h1>
       </div>
     </div>
     
     <div class="row">
       <div class="large-12 columns">
-      	<div class="panel">
+      	<div class="panel">  
 	        <h2>A To-Do List for Better Accessibility</h2>
             <ol>
                 <li>Read <a href="http://webaim.org/standards/wcag/checklist">WebAIM's WCAG 2.0 Checklist</a>. Level A and Level AA items are what we need to aim for.</li>
