--- a/aggiepedia/index.html
+++ b/aggiepedia/index.html
@@ -103,16 +103,16 @@
 	<div id="main" class="clearfix">
 		<div id="content">									
 			<div id="content-header">
-				<h1 class="title">Texas A&M University</h1>
+				<h1 class="title">Texas A&amp;M University</h1>
 			</div> <!-- /#content-header -->
 			<div id="content-area" class="row">
 				<div id="content-wrapper" class="span9  with-right-sidebar">
 					<div id="content-block">
 						<div class="clearfix">
-							<p>Texas A&M's designation as a land, sea, and space grant institution reflects a broad range of research with ongoing projects funded by agencies such as the National Aeronautics and Space Administration (NASA), the National Institutes of Health, the National Science Foundation, and the Office of Naval Research. The school ranks in the top 20 American research institutes in terms of funding and has made notable contributions to such fields as animal cloning and petroleum engineering.</p>
+							<p>Texas A&amp;M's designation as a land, sea, and space grant institution reflects a broad range of research with ongoing projects funded by agencies such as the <a href="http://www.nasa.gov/">National Aeronautics and Space Administration (NASA)</a>, the <a href="http://www.nih.gov/">National Institutes of Health</a>, the <a href="http://www.nsf.gov/">National Science Foundation</a>, and the <a href="http://www.onr.navy.mil/">Office of Naval Research</a>. The school ranks in the top 20 American research institutes in terms of funding and has made notable contributions to such fields as animal cloning and petroleum engineering.</p>
 							
 							<h2>A Little History</h2>
-							<p>The first public institution of higher education in Texas, though not the first general university in the state, the school opened on October 4, 1876 as the Agricultural and Mechanical College of Texas. Originally, the college taught no classes in agriculture, instead concentrating on classical studies, languages, literature, and applied mathematics. After four years, students could attain degrees in scientific agriculture, civil and mining engineering, and language and literature. Under the leadership of President James Earl Rudder, in the 1960s A&M desegregated, became coeducational, and dropped the requirement for participation in the Corps of Cadets. To reflect the institution's expanded roles and academic offerings, the Texas Legislature renamed the school to Texas A&M University in 1963. The letters "A&M", originally short for "Agricultural and Mechanical", are retained only as a link to the university's past. The school's students, alumni, and sports teams are known as "Aggies".</p>
+							<p>The first public institution of higher education in Texas, though not the first general university in the state, the school opened on October 4, 1876 as the Agricultural and Mechanical College of Texas. Originally, the college taught no classes in agriculture, instead concentrating on classical studies, languages, literature, and applied mathematics. After four years, students could attain degrees in scientific agriculture, civil and mining engineering, and language and literature. Under the leadership of President James Earl Rudder, in the 1960s A&amp;M desegregated, became coeducational, and dropped the requirement for participation in the Corps of Cadets. To reflect the institution's expanded roles and academic offerings, the Texas Legislature renamed the school to Texas A&amp;M University in 1963. The letters "A&amp;M", originally short for "Agricultural and Mechanical", are retained only as a link to the university's past. The school's students, alumni, and sports teams are known as "Aggies".</p>
 						</div> <!-- /block-inner /block -->
 					</div>
 				</div>
