--- a/techsummit15/index.html
+++ b/techsummit15/index.html
@@ -58,8 +58,9 @@
       <div class="large-4 medium-4 columns">
         <h2>Helpful Resources</h2>
         <ul>
-            <li></li>
-            <li></li>
+            <li><a href="http://webaim.org/standards/wcag/checklist">WebAIM: WCAG 2.0 Checklist</a></li>
+            <li><a href="http://webaim.org/techniques/forms/controls">WebAIM: Accessible Form Controls</a></li>
+            <li><a href="http://webaim.org/resources/contrastchecker/">WebAIM: Color Contrast Checker</a></li>
             <li></li>
             <li></li>
             <li></li>
