IT Accessibility website link

--- a/techsummit15/index.html
+++ b/techsummit15/index.html
@@ -63,6 +63,7 @@
       <div class="large-4 medium-4 columns">
         <h2>Helpful Resources</h2>
         <ul>
+            <li><a href="http://itaccessibility.tamu.edu/"></a>IT Accessibility at Texas A&amp;M</li>
             <li><a href="http://www.w3.org/TR/WCAG20/">Web Content Accessibility Guidelines (WCAG) 2.0</a></li>
             <li><a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet Applications (WAI-ARIA) 1.0</a></li>
             <li><a href="http://www.w3.org/TR/wai-aria-practices/#aria_ex">WAI-ARIA Design Patterns</a></li>
